objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Review_Score__c</fullName>
        <formula>IF( No_of_Reviews__c  &lt;&gt; 0, Total_Score__c  /  No_of_Reviews__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Reviews__c</fullName>
        <label># of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Indicator__c</fullName>
        <formula>IF( Average_Review_Score__c &gt;=3.75,  IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;GREEN&apos;, 40, 40) ,  
     IF(Average_Review_Score__c &gt;=2.00, IMAGE(&apos;/img/samples/light_yellow.gif&apos;, &apos;YELLOW&apos;, 40, 40), 
        IF(Average_Review_Score__c &gt;=1.00, IMAGE(&apos;/img/samples/light_red.gif&apos;, &apos;RED&apos;, 40, 40), &apos;No Reviews&apos;
        ) 
     ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Interviews Completed</fullName>
                </value>
                <value>
                    <fullName>Preparing Offer</fullName>
                </value>
                <value>
                    <fullName>Offer Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>Review__c.Overall_Score__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>